--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,7 +16,7 @@
 
 body {
   font-family: 'Press Start 2P', cursive;
-  background-color: var(--background-color);
+  background-color: #f5f1e8;
   color: var(--text-color);
   line-height: 1.6;
 }
