--- a/src/styles/foodball.css
+++ b/src/styles/foodball.css
@@ -643,7 +643,7 @@
 }
 
 .entry-detail {
-  background: #f5f1e8;
+  background: #d4c4a8;
   background-image: 
     repeating-linear-gradient(
       0deg,
